Added files via upload

--- a/index.html
+++ b/index.html
@@ -60,6 +60,16 @@
       <div class="polo-container polo-card">
         <h2 class="polo-padding-large"> <i class="fas fa-briefcase fa-fw"> </i> Experiência Profissional </h2>
         <div class="polo-container">
+          <h5> <a href="http://cooperlate.com.br/"> WIH TI Serviços de Informática </a>
+            <div class="polo-pre-tag polo-float-right"> <i class="fas fa-calendar fa-fw polo-margin-right-8 polo-margin-left-16"> </i> <span class="polo-tag"> Julho 2022 </span> </div>
+          </h5>
+          <h7 class="polo-text-color-darkgray polo-margin-left-16 polo-pre-func"> Técnico em Informática </h7>
+          <h6>
+            <p> Atuando no setor de TI, dando suporte ao cliente, realizando manutenções preventivas, formatação, configuração, instalação de programas e atualizações em computadores de clientes. </p>
+          </h6>
+        </div>
+        <hr>
+        <div class="polo-container">
           <h5> <a href="http://cooperlate.com.br/"> Cooperativa dos Produtores de Leite de Serafina </a>
             <div class="polo-pre-tag polo-float-right"> <i class="fas fa-calendar fa-fw polo-margin-right-8 polo-margin-left-16"> </i> <span class="polo-tag"> Ago 2021 - Dez 2021 </span> </div>
           </h5>
